--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 ALCHEMY_API_KEY=oKxs-03sij-U_N0iOlrSsZFr29-IqbuF
 DEPLOYER_PRIVATE_KEY=
 
-# For verification
-ETHERSCAN_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
-ARBITRUM_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
-CELO_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
-
 # To create a reward on Web3Certifier with custom reward contract
 EXAM_ID=
 REWARD_AMOUNT_PER_PERSON=2
 REWARD_AMOUNT_PER_CORRECT_ANSWER=0
+
+# For verification (optional)
+ETHERSCAN_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
+ARBITRUM_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
+CELO_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
 
 # Reward Factory Proxy addresses - DO NOT CHANGE
 SEPOLIA_REWARD_FACTORY_PROXY_ADDRESS=0x8f5ed4371E339D75053d5E0ac6e7b629c4626619
