update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ALCHEMY_API_KEY=oKxs-03sij-U_N0iOlrSsZFr29-IqbuF
-DEPLOYER_PRIVATE_KEY=
+DEPLOYER_PRIVATE_KEY=  # private key of the exam creator
 
 # To create a reward on Web3Certifier with custom reward contract
 EXAM_ID=
