add UniformDistribution custom reward and update all amounts to have 18 decimals

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ DEPLOYER_PRIVATE_KEY=  # private key of the exam creator
 
 # To create a reward on Web3Certifier with custom reward contract
 EXAM_ID=
-REWARD_AMOUNT_PER_PERSON=2
-REWARD_AMOUNT_PER_CORRECT_ANSWER=1
+REWARD_AMOUNT_PER_PERSON=2000000000000000000  # 2e18
+REWARD_AMOUNT_PER_CORRECT_ANSWER=1000000000000000000  # 1e18
 
 # For verification (optional)
 ETHERSCAN_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
